Copyedits, links added to lede item.

--- a/newsletter/2023-03-26.md
+++ b/newsletter/2023-03-26.md
@@ -10,29 +10,30 @@
 
 **It blows my mind** that the asset chiefly responsible for wreaking havoc on banks' books right now [is U.S. Treasury bonds](https://www.nytimes.com/2023/03/24/business/treasury-market-swings-economic-signal.html), not anything akin to the [funky mortgage derivatives](https://en.wikipedia.org/wiki/Subprime_mortgage_crisis) of the 2008 crisis. And it's certainly [not crypto](https://www.forbes.com/sites/digital-assets/2023/03/20/crypto-takeaways-from-recent-bank-failures/).
 
-Treasury debt is supposed to be an utterly vanilla, low-risk investment. Investors traditionally assume the U.S. government will always be good for any money they lend it by buying its bonds. Uncle Sam's pockets are just about infinitely deep, according to the conventional wisdom.
+Treasury debt is supposed to be an utterly vanilla, low-risk investment. Uncle Sam's pockets are almost infinitely deep, according to the conventional wisdom. Thus investors traditionally assume the U.S. government will always be good for any money they lend it by buying its Treasury bonds.
 
-Which brings us to [the current mess](https://finance.yahoo.com/news/analysis-banking-woes-fed-keep-110448314.html). So far, the banks that have failed or found themselves on the brink seem guilty of unusually bad timing in their recent Treasury purchases, executed right before the Federal Reserve started selling T-bonds furiously as part of its effort to fight inflation.
+Which brings us to [the current mess](https://finance.yahoo.com/news/analysis-banking-woes-fed-keep-110448314.html). So far, the banks that have failed or found themselves [on the brink](https://www.msn.com/en-us/money/markets/deutsche-bank-shares-slump-in-latest-sign-of-bank-worries/ar-AA191vOu) have mostly been guilty of [unusually bad timing](https://markets.businessinsider.com/news/stocks/silicon-valley-bank-svb-stock-price-bond-portfolio-firesale-treasury-2023-3) in their recent Treasury purchases, executed right before the Federal Reserve started selling T-bonds furiously as part of its effort to fight inflation.
 
 My friend Matt Phillips' [story for the New York Times](https://www.nytimes.com/2021/08/25/business/banks-government-bonds.html) back in late 2021 illustrates the problem nicely. He described a "binge" among U.S. banks buying T-bonds at the time, including a record $150 billion purchased in the second quarter of 2021 alone.
 
-Less than a year later, the Fed [started increasing](https://www.reuters.com/world/us/all-systems-go-feds-liftoff-us-interest-rates-2022-03-16/) its interest-rate target aggressively to fight inflation. That means the central bank's trading desk had to unload a bunch of T-bonds on the open market -- effectively putting the private-sector banks on the wrong end of the Fed's market maneuver.
+Less than a year later, the Fed [started increasing](https://www.reuters.com/world/us/all-systems-go-feds-liftoff-us-interest-rates-2022-03-16/) its interest-rate target aggressively to combat inflation. That means the central bank's trading desk had to unload a bunch of T-bonds on the open market -- effectively putting the private-sector banks on the wrong end of the Fed's strategy.
 
-Now the losses associated with that bad timing finally seem to be coming home to roost for the banks. The troubled institutions have gotten heavy criticism for this in the press the last few weeks, much of it well-deserved and coming from peers in the financial industry. After all, why didn't the banks see a Fed policy change coming sooner and prepare accordingly?
+Now the losses associated with that bad timing are truly coming home to roost for the banks, threatening their solvency in some cases. The troubled institutions have gotten heavy criticism for this in the press the last few weeks, much of it well-deserved and coming from peers in the financial industry. After all, why didn't the banks see a Fed policy change coming sooner and prepare accordingly?
 
 Fair enough. But still...
 
-I think it's also worth turning this criticism around for just a moment: Didn't *the Fed* realize it might break a lot of financial institutions and possibly invite a crisis by selling so many bonds so rapidly? Why didn't *it* prepare better, especially considering its ostensible role as [protector of stability](https://www.federalreserve.gov/financial-stability.htm) in the U.S. economy? Or did the Fed *not* figure this might happen, which would be disturbing in a whole other way?
+I think it's also worth turning this criticism on its head for just a moment: Didn't *the Fed* realize it might break a lot of financial institutions and possibly invite a crisis by selling so many bonds so rapidly? Why didn't *it* prepare better, especially considering its ostensible role as [protector of stability](https://www.federalreserve.gov/financial-stability.htm) in the U.S. economy? Or did the Fed not figure this might happen, which would be disturbing in a whole other way?
 
-<!-- Tie it  back to crypto... -->
+<!-- graf it  back to crypto... -->
 
-The week's other headlines:
+The week's other notable headlines:
+
+- tk
 
 - tk
 
 - tk
 
-- tk 
 <!--
 - Do Kwon arrested. <!-- https://www.coindesk.com/business/2023/03/23/do-kwon-arrested-in-montenegro-interior-minister/ -->
 <!--
