Fleshing out news summary items

--- a/newsletter/2023-03-26.md
+++ b/newsletter/2023-03-26.md
@@ -1,4 +1,4 @@
-# How did T-bonds become toxic?
+# U.S. Treasuries are blowing up the banks, not crypto
 ## #Web3Weekly: March 19-25, 2023
 
 <!--
@@ -12,7 +12,7 @@
 
 Treasury debt is supposed to be an utterly vanilla, low-risk investment. Uncle Sam's pockets are almost infinitely deep, according to the conventional wisdom. Thus investors traditionally assume the U.S. government will always be good for any money they lend it by buying its Treasury bonds.
 
-Which brings us to [the current mess](https://finance.yahoo.com/news/analysis-banking-woes-fed-keep-110448314.html). So far, the banks that have failed or found themselves [on the brink](https://www.msn.com/en-us/money/markets/deutsche-bank-shares-slump-in-latest-sign-of-bank-worries/ar-AA191vOu) have mostly been guilty of [unusually bad timing](https://markets.businessinsider.com/news/stocks/silicon-valley-bank-svb-stock-price-bond-portfolio-firesale-treasury-2023-3) in their recent Treasury purchases, executed right before the Federal Reserve started selling T-bonds furiously as part of its effort to fight inflation.
+Which brings us to [the current mess](https://finance.yahoo.com/news/analysis-banking-woes-fed-keep-110448314.html). So far, the banks that have failed or found themselves [on the brink](https://www.msn.com/en-us/money/markets/deutsche-bank-shares-slump-in-latest-sign-of-bank-worries/ar-AA191vOu) have mostly been guilty of [bad timing](https://markets.businessinsider.com/news/stocks/silicon-valley-bank-svb-stock-price-bond-portfolio-firesale-treasury-2023-3) on their recent T-bond purchases, executed right before the Federal Reserve started selling Treasury debt furiously as part of its effort to fight inflation.
 
 My friend Matt Phillips' [story for the New York Times](https://www.nytimes.com/2021/08/25/business/banks-government-bonds.html) back in late 2021 illustrates the problem nicely. He described a "binge" among U.S. banks buying T-bonds at the time, including a record $150 billion purchased in the second quarter of 2021 alone.
 
@@ -22,52 +22,35 @@ Now the losses associated with that bad timing are truly coming home to roost fo
 
 Fair enough. But still...
 
-I think it's also worth turning this criticism on its head for just a moment: Didn't *the Fed* realize it might break a lot of financial institutions and possibly invite a crisis by selling so many bonds so rapidly? Why didn't *it* prepare better, especially considering its ostensible role as [protector of stability](https://www.federalreserve.gov/financial-stability.htm) in the U.S. economy? Or did the Fed not figure this might happen, which would be disturbing in a whole other way?
+I think it's also worth turning this criticism on its head for just a moment: Didn't *the Fed* realize it might break a lot of financial institutions and possibly invite a crisis by selling so many bonds so rapidly? Why didn't *it* prepare better, especially considering its ostensible role as [protector of stability](https://www.federalreserve.gov/financial-stability.htm) in the U.S. economy? Or did the Fed *not* figure this might happen, which would be disturbing in a whole other way?
 
-<!-- graf it  back to crypto... -->
+For years, bitcoiners in particular have been warning about scenarios like this, about glaring bugs in the traditional finance system. With every crisis, including the current one, the flaws become more obvious to the general public and Wall Streeters as well.
+
+[A specific example](https://www.youtube.com/watch?v=XmUGG5LMzgU&t=615s) very much worth revisiting: In 2018, a Bloomberg TV reporter asked Jeffrey Sprecher, chairman of the New York Stock Exchange, about the potential for listing a crypto futures contract there. Sprecher didn't give specifics but said it was indeed a possibility. Referring to bitcoin's famously anonymous inventor, Sprecher added:  
+
+*"There is something about technology today that many people are more comfortable with it than they are with the institutions of government and society that I grew up with. People put more faith in a guy named Satoshi Nakamoto that no one has ever met than they do in the U.S. Fed. That's an interesting trend that I don't think you can ignore."*
+
+Five years on, that trend is still going strong indeed.
 
 The week's other notable headlines:
 
-- tk
+- **Police arrested** fugitive Terraform Labs founder Do Kwon [in Montenegro](https://www.cbsnews.com/news/do-kwon-arrest-terraluna-ustc-sdny-stablecoin/). He faces fraud charges in the U.S. in connection with the meltdown of Terraform's TeraUSD and Luna tokens, which cost investors more than $40 billion.
 
-- tk
+- **The Securities and Exchange Commission** filed a civil complaint alleging fraud by Tron founder Justin Sun and other violations by eight celebrities who plugged his companies [without proper disclosures](https://www.reuters.com/legal/sec-sues-justin-sun-others-over-illegal-crypto-sales-2023-03-22/). Most of the defendants immediately settled the charges by paying six-figure fines.
 
-- tk
+- **Coinbase said** the SEC has [issued it a Wells notice](https://www.coinbase.com/blog/we-asked-the-sec-for-reasonable-crypto-rules-for-americans-we-got-legal), which will likely be followed by enforcement action soon. Regulators have expressed concerned about some of the exchange's products, such as its staking service. But Coinbase said it hasn't been clear what changes it should make.
 
-<!--
-- Do Kwon arrested. <!-- https://www.coindesk.com/business/2023/03/23/do-kwon-arrested-in-montenegro-interior-minister/ -->
-<!--
-- SEC charges Justin Sun <!-- Need link -->
-<!--
-- Wells notice to Coinbase <!-- Need link -->
-<!--
-- NYT on the race to re-brand crypto. (https://www.nytimes.com/2023/03/20/technology/crypto-rebranding-marketing.html)
+- **Bitcoin rose 1%** for the week despite market liquidity [hitting a 10-month low](https://decrypt.co/124554/bitcoin-liquidity-hits-10-month-low-us-banking-crisis). The exit of SVB and other troubled banks as links between traditional cash and crypto buying has [hampered](https://www.coindesk.com/consensus-magazine/2023/03/25/bitcoin-was-a-winner-during-the-us-banking-crisis-but-illiquidity-prevents-it-from-being-a-usd-hedge/) wider market participation.
 
-- Slate rant on Android discrimination: https://slate.com/technology/2023/03/android-iphone-messaging-compatibility-problems.html
+- **More than $1 billion in ether** has been lost forever due to software bugs and human error, according to Coinbase executive [Conor Grogan](https://twitter.com/jconorgrogan/status/1637944295746412549).
 
-<!-- Bitbond sponsorship -->
-<!--
-- Fed decision. <!-- Recap. Need link. -->
-<!--
-- CoinDesk: 3 lessons for crypto founders from chatgpt's success. (https://www.coindesk.com/consensus-magazine/2023/03/18/3-lessons-web3-founders-can-take-from-chatgpts-success/)
+- **USDC issuer Circle** has applied for a crypto license [in France](https://www.theblock.co/post/221432/circle-applies-for-french-crypto-license).
 
-- Bitcoin miner Core Scientific will unload $20 million in equipment as part of a bankruptcy settlement. (https://cointelegraph.com/news/core-scientific-to-transfer-20m-of-equipment-to-settle-bankruptcy-dispute)
+- **Antisemitic tweets have doubled** since Elon Musk took over Twitter, according to a new study [by CASM Technology and the Institute for Strategic Dialogue](https://www.salon.com/2023/03/22/antisemitism-on-twitter-has-more-than-doubled-since-elon-musk-took-over-the-platform-new-research_partner/).
 
-- USDC issuer Circle has applied for a crypto license in France. (https://www.theblock.co/post/221432/circle-applies-for-french-crypto-license)
+- **Intel co-founder Gordon Moore,** who famously predicted a steady rise in the computing power of microchips over decades, [died on Friday](https://www.reuters.com/technology/intel-co-founder-gordon-moore-dies-94-2023-03-25/). He was 94.
 
-- Changing VC landscape (https://www.theblock.co/post/221395/crypto-venture-capitalists-facing-lighter-pocket-books-amid-slump)
-
-- The Block: Over $1 billion in ether has been lost forever due to human error. (https://www.theblock.co/post/221453/over-1-billion-of-ether-lost-forever-bugs-human-error)
-
-- Antisemitic tweets have doubled since Elon Musk took over twitter. (https://www.salon.com/2023/03/22/antisemitism-on-twitter-has-more-than-doubled-since-elon-musk-took-over-the-platform-new-research_partner/)
-
-- WSJ: Apple and Microsot are now 15% of the S&P. (https://www.wsj.com/articles/apple-microsoft-dominate-u-s-markets-after-faang-trade-fizzles-d6f10309)
-
-- A U.S. ban on TikTok is an awful idea. Here's my two cents why. https://twitter.com/peteramckay/status/1638944602546642952
-
-- Stellabelle digital art. <!-- tktktk -->
-<!--
-- tk <!-- Lighter item -->
+- **Fight the power?** Slate's Luke Winkie published an [epic rant](https://slate.com/technology/2023/03/android-iphone-messaging-compatibility-problems.html) about anti-Android "discrimination" he's experienced. Hmmm...
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
