--- a/newsletter/2023-03-26.md
+++ b/newsletter/2023-03-26.md
@@ -1,4 +1,4 @@
-# U.S. Treasuries are blowing up the banks, not crypto
+# U.S. Treasuries are wrecking banks, not crypto
 ## #Web3Weekly: March 19-25, 2023
 
 <!--
@@ -24,13 +24,9 @@ Fair enough. But still...
 
 I think it's also worth turning this criticism on its head for just a moment: Didn't *the Fed* realize it might break a lot of financial institutions and possibly invite a crisis by selling so many bonds so rapidly? Why didn't *it* prepare better, especially considering its ostensible role as [protector of stability](https://www.federalreserve.gov/financial-stability.htm) in the U.S. economy? Or did the Fed *not* figure this might happen, which would be disturbing in a whole other way?
 
-For years, bitcoiners in particular have been warning about scenarios like this, about glaring bugs in the traditional finance system. With every crisis, including the current one, the flaws become more obvious to the general public and Wall Streeters as well.
+You know, it's almost as if having a committee with a handful of members meet behind closed doors [eight times a year](https://www.federalreserve.gov/monetarypolicy/fomccalendars.htm) to set the monetary policy of a modern, multi-trillion dollar economy might be an antiquated way to do it. If only someone would invent a more nimble, transparent, consistent method... 
 
-[A specific example](https://www.youtube.com/watch?v=XmUGG5LMzgU&t=615s) very much worth revisiting: In 2018, a Bloomberg TV reporter asked Jeffrey Sprecher, chairman of the New York Stock Exchange, about the potential for listing a crypto futures contract there. Sprecher didn't give specifics but said it was indeed a possibility. Referring to bitcoin's famously anonymous inventor, Sprecher added:  
-
-*"There is something about technology today that many people are more comfortable with it than they are with the institutions of government and society that I grew up with. People put more faith in a guy named Satoshi Nakamoto that no one has ever met than they do in the U.S. Fed. That's an interesting trend that I don't think you can ignore."*
-
-Five years on, that trend is still going strong indeed.
+Oh, [right](https://bitcoin.org/en/bitcoin-paper). 
 
 The week's other notable headlines:
 
