Final edit for 2 Apr 2023

--- a/newsletter/2023-04-02.md
+++ b/newsletter/2023-04-02.md
@@ -1,4 +1,4 @@
-# tktktkktkt
+# Bitcoin's banner quarter
 ## #Web3Weekly: March 26 to April 1, 2023
 
 <!-- ![](https://w3w.news/img/illos/tktktktktktktktkttktktktk)
@@ -8,39 +8,27 @@
 
 Frankly, the most eye-popping part has to be bitcoin's performance. It rose 10 times faster than the S&P 500 in the first period, up 72%, its [best quarterly gain](https://www.bloomberg.com/news/articles/2023-03-31/bitcoin-s-btc-surge-mkes-it-the-best-performing-asset-in-q1-2023) in two years. And its dominance of the broader crypto market [jumped](https://www.fool.com/investing/2023/04/02/is-bitcoin-a-screaming-buy-right-now-this-metric-s/) as well, nearing the 50% threshold again.
 
-As I've noted [previously](https://medium.com/the-modern-scientist/bitcoin-passes-a-big-test-80223963671f), the recent woes of conventional banks have definitely helped to boost bitcoin. That said, the token's price wasn't quite able to break through the $30,000 milestone last week. So it still faces some uphill battles as well in the marketplace.
+As I've noted [previously](https://medium.com/the-modern-scientist/bitcoin-passes-a-big-test-80223963671f), the recent woes of conventional banks have definitely helped to boost bitcoin.
+
+That said, the token's price clearly struggled to break through the [$30,000 milestone](https://www.fxstreet.com/cryptocurrencies/news/will-bitcoin-hit-its-35-000-target-in-april-btc-deep-dive-202304021347) last week. So it still faces some uphill battles as well in the marketplace.
 
 The week's other notable headlines:
 
-- CFTC sues CZ <!-- Need link... -->
+- **The Commodity Futures Trading Commission sued Binance** and two of its senior executives, alleging (https://www.cnbc.com/2023/03/27/binance-and-founder-changpeng-zhao-sued-by-cftc-for-allegedly-violating-trading-rules.html) that the world's largest crypto exchange encouraged U.S. users to join in violation of local regulations. Binance CEO Changpeng Zhao, who is named in the CFTC's civil complaint, released a [statement](https://www.binance.com/en/blog/from-cz/czs-response-to-the-cftc-complaint-2408916493005890282) calling it "unexpected and disappointing," and based on "an incomplete recitation of facts."
 
-- New SBF charge <!-- Need link --> | FTX set up a site to repay European users. https://www.coindesk.com/business/2023/03/31/ftx-eu-sets-up-website-to-repay-users/
+- **U.S. prosecutors added a new charge** to their criminal case against FTX founder Sam Bankman-Fried, accusing him of [paying a $40 million bribe](https://www.reuters.com/legal/ftxs-bankman-fried-charged-with-bribery-conspiracy-new-indictment-2023-03-28/) to Chinese officials. Bankman-Fried [pleaded not guilty](https://www.cnn.com/2023/03/30/business/sbf-hearing/index.html). Separately, FTX [launched a new website](https://www.coindesk.com/business/2023/03/31/ftx-eu-sets-up-website-to-repay-users/) for European users to withdraw their money from the bankrupt exchange.
 
-- Investors have poured money into crypto for four straight months. (https://www.coindesk.com/markets/2023/03/31/investors-pour-money-into-crypto-investments-for-a-fourth-straight-month/)
+- **Investment in managed digital-asset products** rose for a fourth straight month in March, CoinDesk [reports](https://www.coindesk.com/markets/2023/03/31/investors-pour-money-into-crypto-investments-for-a-fourth-straight-month/). Activity rose to $13.4 billion for the month, up 60% from its November low, according to data from CryptoCompare.
 
-- Citi analysts say tokenized securities could be a TK market by TK. https://www.theblock.co/post/224014/citi-tokenized-securities-use-case | "The future of banking is no banks." https://www.theblock.co/post/224344/hyper-bitcoinization
+- **Wall Stret analysts made some bold crypto calls.** A new report from Citi claims tokenized securities cuold become a [$4 trillion market](https://www.theblock.co/post/224014/citi-tokenized-securities-use-case). Meanwhile, Bernstein analysts said that any further failures of conventional banks could spark a ["hyper-bitcoinization"](https://www.theblock.co/post/224344/hyper-bitcoinization) cycle of BTC adoption globally.
 
-- Kraken partnering with F1.
+- **ZeroSync and Blockstream** are experimenting with a new satellite-based method for syncing Bitcoin network nodes. Their approach uses zero-knowledge proofs to avoid nodes having to download the entire Bitcoin blockchain, which thus achieves greater transaction speeds, according to [CoinDesk](https://www.coindesk.com/tech/2023/03/31/zerosync-and-blockstream-to-broadcast-bitcoin-zero-knowledge-proofs-from-space/).
 
-- Disney closed its metaverse unit <!-- Need link -->
+- **Kraken partnered with** the Formula One team Williams Racing. [The deal](https://www.forbesindia.com/article/cryptocurrency/kraken-partners-with-williams-racing-f1-team-in-new-crypto-sponsorship-deal/84037/1) could signal an industry-wide comeback for such sponsorships, which had waned during the recent Crypto Winter.
 
-- Broadcasting zk proofs from space.
-https://www.coindesk.com/tech/2023/03/31/zerosync-and-blockstream-to-broadcast-bitcoin-zero-knowledge-proofs-from-space/
+- **Disney** is eliminating [its metaverse unit](https://www.cnbc.com/2023/03/28/disney-reportedly-cuts-metaverse-division-under-igers-restructuring.html) as part of a new round of companywide cost cuts. Ouch.
 
-<!--
-
-- Congress hearings on collapses.
-
-- Galaxy Digital reported a quarterly loss.
-
-- TUSD volume surpassed $1B thanks to a boost from Binance. https://www.coindesk.com/markets/2023/03/31/tusd-stablecoin-daily-trading-volume-surpasses-1b-after-binance-boost/
-
-- Dan batten on new data about hydro power for bitcion. (https://twitter.com/DSBatten/status/1641589473757769729)
-
-- An upcoming bitcoin conference in Atlanta is open sourcing its agenda. https://www.coindesk.com/tech/2023/03/31/planners-of-bitcoin-conference-in-atlanta-move-to-open-source-their-agenda/
-
-- Bank of England's cbdc lead says a stablecoin could be a "bridge" between bitcoin and other services. (https://decrypt.co/124957/cbdc-can-be-bridging-asset-between-bitcoin-tradfi-bank-england). -->
-
+- **Twitter apparently** played [an obnoxious April Fools gag](https://www.politico.com/news/2023/04/01/april-fools-twitter-blue-check-00090053) on its verified users. However, journalist S.P. Sullivan [took it in stride](https://twitter.com/spsullivan/status/1640076114558066691).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
