adding another sponsor image

--- a/newsletter/2023-04-09.md
+++ b/newsletter/2023-04-09.md
@@ -1,11 +1,15 @@
 # To NFT or not to NFT...
 ## #Web3Weekly: April 2-8, 2023
 
-*This newsletter is happy to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space.*
+*This newsletter is happy to be a media partner of the [Epic Web3 Conference](https://www.epicweb3.com/), coming up June 9 in Lisbon. This can't-miss event will feature an [amazing lineup](https://www.epicweb3.com/#speaker) of speakers from every facet of the web3 space, as you can see from the graphic below.*
 
 *Through April 30, Epic Web3 is offering a 15% discount for our readers when you purchase a Full or VC pass to their conference. To redeem the #Web3Weekly discount, be sure to apply the code WEB3WEEKLY at checkout when you purchase your ticket [here](http://bit.ly/3kDskvF).*
 
 *EW3 is shaping up to be a truly amazing event, so be sure to get your pass before April 30, when the discount expires. [Book your discounted pass today!](http://bit.ly/3kDskvF)*
+
+[![EWC banner ad](https://w3w.news/img/sponsored/Speakers1.png)](http://bit.ly/3kDskvF)
+
+<hr>
 
 **It's not unusual at this point** for star musicians to experiment with non-fungible tokens. But two recent announcements by rock royalty show starkly different approaches to marketing the tokens.
 
