Fleshing out news summary items

--- a/newsletter/2023-04-09.md
+++ b/newsletter/2023-04-09.md
@@ -11,34 +11,42 @@
 
 <hr>
 
-**It's not unusual at this point** for star musicians to experiment with non-fungible tokens. But two recent announcements by rock royalty show starkly different approaches to marketing the tokens.
+**Many famous entertainers** have offered either their work or collectibles for fans as non-fungible tokens lately. But two recent announcements by rock n' roll royalty show starkly different approaches to marketing the tokens.
 
-David Bowie's estate said it's preparing to offer a previously unreleased version of his hit Let's Dance [as an NFT](https://decrypt.co/125653/unreleased-david-bowie-recording-debut-music-nft), with proceeds going to charity.
+David Bowie's estate [announced Thursday](https://decrypt.co/125653/unreleased-david-bowie-recording-debut-music-nft) it will offer a previously unreleased version of his hit Let's Dance as an NFT, with proceeds going to charity. Separately, the Rolling Stones will soon [offer  vintage photos](https://www.theblock.co/post/225338/rolling-stones-nfts-digital-certificates-of-authenticity) of the band, each offered in physical form paired with an NFT.
 
-Separately, the Rolling Stones said they will offer  vintage photos of the band, each offered in physical form paired with an NFT. But there's a catch: The Stones are pitching the the tokens as "[Digital Certificates of Authenticity](https://www.theblock.co/post/225338/rolling-stones-nfts-digital-certificates-of-authenticity)," or "DCOAs", eschewing the term "NFTs," which took on a lot of baggage as prices plunged during last year's Crypto Winter.
+But there's a catch: The Stones are pitching their tokens as "Digital Certificates of Authenticity," or "DCOAs," eschewing the term "NFT." From a technical standpoint, there's really no difference. But the Stones seem wary of the "NFT" label as it took on a lot of baggage when prices plunged during last year's Crypto Winter.
 
-Who knows whether this will work to attract more bidders for the tokens. But it will be interesting to see if the tactic becomes a trend among other artists interested in on-chain technology.
+The Block notes that television and movie studios have [used similarly vague language](https://www.theblock.co/post/225338/rolling-stones-nfts-digital-certificates-of-authenticity) lately in issuing collectible tokens, calling them anything but "NFTs."
+
+For the broader market, it will be interesting to see if this rhetorical jiujitsu "sticks" in the months ahead. Perhaps some new term beside "NFT" will take over as the dominant nomenclature for these kinds of tokens? Or perhaps Bowie's method -- frankly *calling the thing what it is* using a name that works perfectly well already -- can make a comeback?
 
 The week's other notable headlines:
 
-- Bitcoin mining difficulty and revenue hit new all-time highs. (https://www.theblock.co/post/225359/bitcoin-difficulty-hashrate-miner-revenue)
+- **Bitcoin mining difficulty** and hash rate hit [fresh all-time highs](https://www.theblock.co/post/225359/bitcoin-difficulty-hashrate-miner-revenue). Mining revenue was also up, rising to $755 million in March, according to The Block.
 
-- The U.S. Treasury deparment published a study of defi
-https://home.treasury.gov/system/files/136/DeFi-Risk-Full-Review.pdf <!-- | Most criminal activity still takes place in fiat, not crypto, according to a new U.S. Treasury Deparment report. (https://decrypt.co/125623/crooks-defi-crypto-fiat-treasury) | https://www.coindesk.com/policy/2023/04/06/us-treasury-warns-that-defi-used-by-north-korea-scammers-to-launder-dirty-money/ | https://decrypt.co/125683/north-koreas-malicious-cyber-activities-deeply-concerning-say-us-japan-south-korea-report -->
+- **The U.S. Treasury Department** published its [first detailed analysis](https://home.treasury.gov/system/files/136/DeFi-Risk-Full-Review.pdf) of the crime and national security risks associated with decentralized finance protocols. Common criminals, terrorists, and North Korea's authoritarian regime are all using defi to steal and launder money, [Treasury said](https://www.coindesk.com/policy/2023/04/06/us-treasury-warns-that-defi-used-by-north-korea-scammers-to-launder-dirty-money/). But it also noted that old-fashioned fiat cash is still used [far more widely](https://decrypt.co/125623/crooks-defi-crypto-fiat-treasury) for illicit activity.
 
-- Mt. Gox repayment window opened. (https://www.theblock.co/post/225362/mtgox-repayment-window-open)
+- **Repayments for users** of the failed Mt. Gox bitcoin exchange [have begun](https://www.theblock.co/post/225362/mtgox-repayment-window-open) under the supervision of a Tokyo court.
 
 [![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)](http://bit.ly/3kDskvF)
 
-- **Prosecutors ordered** Do Kwon to [stop liquidating](https://bitcoinist.com/do-kwon-ordered-to-halt-crypto-liquidation/) millions of dollars in cryptoassets.
+- **Prosecutors ordered** Terra Labs founder Do Kwon to [stop liquidating](https://bitcoinist.com/do-kwon-ordered-to-halt-crypto-liquidation/) millions of dollars in cryptoassets.
 
-- Polygon became the second most popular blockchain for gaming in March, behind only Ethereum. https://bitcoinist.com/polygon-2nd-largest-gaming-blockchain/
+- **Polygon became** the second most popular blockchain for gaming in March, [behind only WAX](https://bitcoinist.com/polygon-2nd-largest-gaming-blockchain/).
 
-- **Bitcoinist published** a [timely explainer](https://bitcoinist.com/why-you-need-a-bitcoin-hardware-wallet/) of the advantages of hardware wallets versus holding tokens on a centralized exchange.
+- **Attendance plummeted** at Decentraland's second-ever Metaverse Fashion Week. The event saw 26,000 unique visitors, down 76% from last year's 108,000 visitors, Decrypt [reports](https://decrypt.co/125737/winner-decentraland-metaverse-fashion-week-2023).
 
-- Attendance was down at metaverse fashion week. (https://decrypt.co/125737/winner-decentraland-metaverse-fashion-week-2023)
+- **Blogger Andy Baio** discovered that every modern version of macOS has been [hiding a copy](https://waxy.org/2023/04/the-bitcoin-whitepaper-is-hidden-in-every-modern-copy-of-macos/) of Satoshi Nakamoto's bitcoin whitepaper for years. Baio found it while fixing his printer. LOL.
 
-- MacOS has been hiding a copy of Satoshi's whitepaper for years. (https://waxy.org/2023/04/the-bitcoin-whitepaper-is-hidden-in-every-modern-copy-of-macos/)
+- **Some people would say that's not an improvement.** As part of an emissions-reduction program, Cointelegraph reports that Irish dairy farmers are turning [cow dung into bitcoin](https://www.youtube.com/watch?v=xkVOJAWP688).
+
+
+
+
+
+<!--
+
 
 - OpenSea Pro fared well in the early going versus Blur. (https://www.theblock.co/post/225457/opensea-pro-blur-transactions-volumes-addresses)
 
@@ -46,7 +54,6 @@ https://home.treasury.gov/system/files/136/DeFi-Risk-Full-Review.pdf <!-- | Most
 
 - Well, that's one doozie of a bug. ChatGPT said a prominent law professor committed sexual assault during a trip he never took. (https://decrypt.co/125712/chatgpt-wrongly-accuses-law-professor-sexual-assault)
 
-- Irish farmers are turning cow dung into bitcoin. (https://www.youtube.com/watch?v=xkVOJAWP688)
 
 <!--
 
@@ -79,7 +86,7 @@ https://www.coindesk.com/consensus-magazine/2023/03/30/coindesk-editorial-it-sur
 
 - New BRICS currency? <!-- Need link. Some search results: https://duckduckgo.com/?q=new+brics+currency&t=brave&iar=news&ia=news
 
-- Angwin: Don' buy anything advertised to you online. <!-- https://www.nytimes.com/2023/04/06/opinion/online-advertising-privacy-data-surveillance-consumer-quality.html
+- Angwin: Don't buy anything advertised to you online. <!-- https://www.nytimes.com/2023/04/06/opinion/online-advertising-privacy-data-surveillance-consumer-quality.html
 
 - Fode Diop vid on using ChatGPT to learn bitcoin programming. https://www.youtube.com/watch?v=NeM3WlFZO8E
 
