Adding 2 more news items

--- a/newsletter/2023-04-09.md
+++ b/newsletter/2023-04-09.md
@@ -25,11 +25,15 @@ The week's other notable headlines:
 
 - **Bitcoin mining difficulty** and hash rate hit [fresh all-time highs](https://www.theblock.co/post/225359/bitcoin-difficulty-hashrate-miner-revenue). Mining revenue was also up, rising to $755 million in March, according to The Block.
 
+- **Uniswap trading volume handily topped Coinbase's**  in March, $70 billion to $49.2 billion. The decentralized Uniswap was particularly active during a brief period when the USDC stablecoin lost its peg to the dollar. But Coinbase could be due to push back ahead now as token markets are functioning more normally, [according to CoinDesk](https://www.coindesk.com/markets/2023/04/06/uniswap-topped-coinbases-trading-volume-in-march-during-usdc-depeg-us-crackdown/).
+
 - **The U.S. Treasury Department** published its [first detailed analysis](https://home.treasury.gov/system/files/136/DeFi-Risk-Full-Review.pdf) of the crime and national security risks associated with decentralized finance protocols. Common criminals, terrorists, and North Korea's authoritarian regime are all using defi to steal and launder money, [Treasury said](https://www.coindesk.com/policy/2023/04/06/us-treasury-warns-that-defi-used-by-north-korea-scammers-to-launder-dirty-money/). But it also noted that old-fashioned fiat cash is still used [far more widely](https://decrypt.co/125623/crooks-defi-crypto-fiat-treasury) for illicit activity.
 
-- **Repayments for users** of the failed Mt. Gox bitcoin exchange [have begun](https://www.theblock.co/post/225362/mtgox-repayment-window-open) under the supervision of a Tokyo court.
-
 [![EWC banner ad](https://w3w.news/img/sponsored/ewc-banner.png)](http://bit.ly/3kDskvF)
+
+- **The total value of gold** tokenized on blockchain networks surpassed the $1 billion milestone on Wednesday. It has recently been boosted by the U.S. banking crisis, The Block [reports](https://www.theblock.co/post/224950/tokenized-gold-tops-1-billion-market-cap-amid-banking-crisis-concerns).
+
+- **Repayments for users** of the failed bitcoin exchange Mt. Gox [have begun](https://www.theblock.co/post/225362/mtgox-repayment-window-open) under the supervision of a Tokyo court.
 
 - **Prosecutors ordered** Terra Labs founder Do Kwon to [stop liquidating](https://bitcoinist.com/do-kwon-ordered-to-halt-crypto-liquidation/) millions of dollars in cryptoassets.
 
@@ -53,9 +57,6 @@ The week's other notable headlines:
 - Push Protocol launched a privacy-focused AI chatbot that uses MetaMask wallets and other blockchain technologies. (https://decrypt.co/125671/push-protocol-launches-privacy-focused-chatgpt-clone)
 
 - Well, that's one doozie of a bug. ChatGPT said a prominent law professor committed sexual assault during a trip he never took. (https://decrypt.co/125712/chatgpt-wrongly-accuses-law-professor-sexual-assault)
-
-
-<!--
 
 **Kevin Reynolds, CoinDesk's editor in chief,** just sounded a loud alarm about American crypto regulation.  
 
@@ -82,17 +83,12 @@ says it's [] the
 
 https://www.coindesk.com/consensus-magazine/2023/03/30/coindesk-editorial-it-sure-looks-like-the-us-is-trying-to-kill-crypto/
 
-- Bloomberg: Uniswap monthly volume surpassed Coinbase. <!-- Need link
-
-- New BRICS currency? <!-- Need link. Some search results: https://duckduckgo.com/?q=new+brics+currency&t=brave&iar=news&ia=news
 
 - Angwin: Don't buy anything advertised to you online. <!-- https://www.nytimes.com/2023/04/06/opinion/online-advertising-privacy-data-surveillance-consumer-quality.html
 
 - Fode Diop vid on using ChatGPT to learn bitcoin programming. https://www.youtube.com/watch?v=NeM3WlFZO8E
 
 - Openeden launched tokenized U.S. Treasuries. <!-- Need link
-
-- More than $1 billion in gold has been tokenized. (https://www.theblock.co/post/224950/tokenized-gold-tops-1-billion-market-cap-amid-banking-crisis-concerns)
 
 - Police are still looking for the killer of a Cash app co-founder. (https://www.theblock.co/post/224979/bob-lee-cashapp-mobilecoin-stabbed-death-suspects)
 
