Final copy for 9 April 2023

--- a/newsletter/2023-04-09.md
+++ b/newsletter/2023-04-09.md
@@ -43,60 +43,7 @@ The week's other notable headlines:
 
 - **Blogger Andy Baio** discovered that every modern version of macOS has been [hiding a copy](https://waxy.org/2023/04/the-bitcoin-whitepaper-is-hidden-in-every-modern-copy-of-macos/) of Satoshi Nakamoto's bitcoin whitepaper for years. Baio found it while fixing his printer. LOL.
 
-- **Some people would say that's not an improvement.** As part of an emissions-reduction program, Cointelegraph reports that Irish dairy farmers are turning [cow dung into bitcoin](https://www.youtube.com/watch?v=xkVOJAWP688).
-
-
-
-
-
-<!--
-
-
-- OpenSea Pro fared well in the early going versus Blur. (https://www.theblock.co/post/225457/opensea-pro-blur-transactions-volumes-addresses)
-
-- Push Protocol launched a privacy-focused AI chatbot that uses MetaMask wallets and other blockchain technologies. (https://decrypt.co/125671/push-protocol-launches-privacy-focused-chatgpt-clone)
-
-- Well, that's one doozie of a bug. ChatGPT said a prominent law professor committed sexual assault during a trip he never took. (https://decrypt.co/125712/chatgpt-wrongly-accuses-law-professor-sexual-assault)
-
-**Kevin Reynolds, CoinDesk's editor in chief,** just sounded a loud alarm about American crypto regulation.  
-
-In [an editorial](https://www.coindesk.com/consensus-magazine/2023/03/30/coindesk-editorial-it-sure-looks-like-the-us-is-trying-to-kill-crypto/) published March 30, Reynolds addressed growing complaints in the crypto industry that several U.S. regulatory agencies are effectively coordinating to choke off *all* companies in the sector, regardless of involvement in any specific wrongdoing and without any sweeping legislative ban in place.
-
-Reynolds stopped just short of endorsing this assertion. But he also noted it's "increasingly hard to argue against," considering recent anti-crypto provisions in the rescue plan for Silicon Valley Bank and other measures.
-
-
-
-
-**Several crypto industry insiders** lately have claimed that
-
-It's an explosive accusation -- and difficult to prove.
-
-Kevin Reynolds, CoinDesk's editor in chief.
-
-**In a new editorial,** CoinDesk's top editor Kevin Reynolds addressed the accusation that U.S. regulators are trying to squeeze *all* crypto companies out of the country's financial system, regardless of
-
-says it's [] the
-
-*But whether this is a coordinated effort against crypto or not may be irrelevant. Some people are convinced it’s real, and not just my friend Harry. The idea is rampant now: The U.S. has it in for crypto. So some firms are looking at moving overseas, while others are worried they will lose or be unable to obtain bank accounts. And it’s not just industry folk who believe this. Bankers, for instance, are declining invitations to speak at crypto gatherings, fearful of painting targets on their institutions’ backs.*
-
-*Without a significant change of course by the Biden administration, the view that the U.S. is anti-crypto will soon become too entrenched to uproot. The fact that most of the U.S. government’s actions have been punitive rather than constructive is a huge factor.*
-
-https://www.coindesk.com/consensus-magazine/2023/03/30/coindesk-editorial-it-sure-looks-like-the-us-is-trying-to-kill-crypto/
-
-
-- Angwin: Don't buy anything advertised to you online. <!-- https://www.nytimes.com/2023/04/06/opinion/online-advertising-privacy-data-surveillance-consumer-quality.html
-
-- Fode Diop vid on using ChatGPT to learn bitcoin programming. https://www.youtube.com/watch?v=NeM3WlFZO8E
-
-- Openeden launched tokenized U.S. Treasuries. <!-- Need link
-
-- Police are still looking for the killer of a Cash app co-founder. (https://www.theblock.co/post/224979/bob-lee-cashapp-mobilecoin-stabbed-death-suspects)
-
-- Paxos's application for a banking charter has expired. (https://www.theblock.co/post/225442/paxos-national-charter-application-expired)
-
-- Satoshi's birthday was Wednesday. (https://www.coindesk.com/consensus-magazine/2023/04/05/happy-48th-birthday-satoshi-nakamoto/)
-
--->
+- **Cointelegraph visited some Irish dairy farmers** who are turning [cow dung into bitcoin](https://www.youtube.com/watch?v=xkVOJAWP688) as part of an emissions-reduction program. Wow...
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
